--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -14,3 +14,17 @@ body {
 html {
   font-size: 62.5%;
 }
+
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0.5rem #978b7d;
+  border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #faab31;
+  border-radius: 0.5rem;
+}
